rendered/envs/alpha/argocd/networkpolicy-argocd-repo-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: argocd-repo-server-network-policy
  namespace: argocd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-server
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-application-controller
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-notifications-controller
      ports:
        - port: 8081
          protocol: TCP
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8084
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  policyTypes:
    - Ingress
